spring boot is sweet

--- a/bot-api/src/main/resources/application.properties
+++ b/bot-api/src/main/resources/application.properties
@@ -1,3 +1,7 @@
+server.contextPath=/bot
+springfox.documentation.swagger.v2.path=/oai/api-docs
+springfox.documentation.swagger.v2.host=test
+
 tesseract.data.path=C:\\Program Files (x86)\\Tesseract-OCR\\
 tesseract.magic.cards.name.list=C:\\testing\\mtgo-bot\\user-words-magic.txt
 image.scaling.factor=4
