--- a/bot-client/pom.xml
+++ b/bot-client/pom.xml
@@ -5,16 +5,16 @@
 	<groupId>com.cd.bot</groupId>
 	<artifactId>bot-client</artifactId>
 	<name>bot-client</name>
+	<version>1.0.2</version>
+	<packaging>jar</packaging>
 	
 	<parent>			
 		<groupId>com.cd.bot</groupId>
 		<artifactId>mtgo-best-bot</artifactId>
-		<version>${project.version}</version>
+		<version>1.0.2</version>
 	</parent>
 	
-	<packaging>jar</packaging>
-	
-	<version>${project.version}</version>
+
 
 	<dependencies>
 		<!-- Commons CSV -->
@@ -28,7 +28,6 @@
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-context</artifactId>
-			<version>${org.springframework.version}</version>
 			<exclusions>
 				<!-- Exclude Commons Logging in favor of SLF4j -->
 				<exclusion>
@@ -41,13 +40,11 @@
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-webmvc</artifactId>
-			<version>${org.springframework.version}</version>
 		</dependency>
 
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-tx</artifactId>
-			<version>${org.springframework.version}</version>
 		</dependency>
 
 		<!-- AspectJ -->
@@ -114,7 +111,6 @@
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-test</artifactId>
-			<version>${org.springframework.version}</version>
 			<scope>test</scope>
 		</dependency>
 
