--- a/bot-api/src/main/resources/application.properties
+++ b/bot-api/src/main/resources/application.properties
@@ -1,18 +1,4 @@
-server.contextPath=/bot
 springfox.documentation.swagger.v2.path=/oai/api-docs
-springfox.documentation.swagger.v2.host=test
-
-tesseract.data.path=C:\\Program Files (x86)\\Tesseract-OCR\\
-tesseract.magic.cards.name.list=C:\\testing\\mtgo-bot\\user-words-magic.txt
-image.scaling.factor=4
-screen.width=1920
-screen.height=1080
-
-#Supports use of wildcards
-executable.dir=C:\\Users\\Cory\\AppData\\Local\\Apps\\2.0\\
-executable.name=**MTGO.exe
-
-#If the program can only launch via shortcut
-executable.shortcut.only=true
-executable.x.offset=1860
-executable.y.offset=25
+springfox.documentation.swagger.v2.host=localhost
+hibernate.hbm2ddl.auto = update
+server.port=${port:80}
