--- a/bot-api/src/main/resources/application.properties
+++ b/bot-api/src/main/resources/application.properties
@@ -2,10 +2,8 @@ jdbc.driverClassName = org.postgresql.Driver
 jdbc.url = jdbc:postgresql://localhost:5432/postgres
 jdbc.username = cory
 jdbc.password = cory
-hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
-hibernate.show_sql = true
-hibernate.format_sql = true
-hibernate.hbm2ddl.auto = update
+spring.jpa.hibernate.ddl-auto=create-drop
+#spring.jpa.hibernate.ddl-auto=validate For production and shits
 
 springfox.documentation.swagger.v2.path=/oai/api-docs
 springfox.documentation.swagger.v2.host=localhost
