Auto scripts, comm in prog

--- a/bot-api/src/main/resources/application.properties
+++ b/bot-api/src/main/resources/application.properties
@@ -6,6 +6,6 @@ spring.jpa.hibernate.ddl-auto=create-drop
 #spring.jpa.hibernate.ddl-auto=validate For production and shits
 
 springfox.documentation.swagger.v2.path=/oai/api-docs
-springfox.documentation.swagger.v2.host=localhost
+springfox.documentation.swagger.v2.host=192.168.1.152
 hibernate.hbm2ddl.auto = update
 server.port=${port:80}
