--- a/bot-client/src/main/resources/bot-client/application.properties
+++ b/bot-client/src/main/resources/bot-client/application.properties
@@ -1,4 +1,5 @@
 bot.api.url=http://localhost
+bot.name=baronvonfonz
 
 tesseract.data.path=C:\\Program Files (x86)\\Tesseract-OCR\\
 tesseract.magic.cards.name.list=C:\\testing\\mtgo-bot\\user-words-magic.txt
