--- a/bot-api/src/main/resources/application.properties
+++ b/bot-api/src/main/resources/application.properties
@@ -9,3 +9,6 @@ spring.jpa.hibernate.ddl-auto=validate
 springfox.documentation.swagger.v2.path=/oai/api-docs
 springfox.documentation.swagger.v2.host=192.168.1.152
 server.port=${port:80}
+
+upload.temp.folder=C:\\testing\\tmp
+debug=true
