--- a/bot-orchestrator/pom.xml
+++ b/bot-orchestrator/pom.xml
@@ -42,6 +42,11 @@
 			<version>2.3.2</version>
 			<scope>compile</scope>
 		</dependency>
+		<dependency>
+			<groupId>com.cd.bot.model</groupId>
+			<artifactId>bot-model</artifactId>
+			<version>${project.version}</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
