--- a/bot-orchestrator/src/main/resources/application.properties
+++ b/bot-orchestrator/src/main/resources/application.properties
@@ -1,14 +1,5 @@
-tesseract.data.path=C:\\Program Files (x86)\\Tesseract-OCR\\
-tesseract.magic.cards.name.list=C:\\testing\\mtgo-bot\\user-words-magic.txt
-image.scaling.factor=4
-screen.width=1920
-screen.height=1080
-
-#Supports use of wildcards
-executable.dir=C:\\Users\\Cory\\AppData\\Local\\Apps\\2.0\\
-executable.name=**MTGO.exe
-
-#If the program can only launch via shortcut
-executable.shortcut.only=true
-executable.x.offset=1860
-executable.y.offset=25
+spring.datasource.url=jdbc:postgresql://localhost:5432/springbootdb
+spring.datasource.username=cory
+spring.datasource.password=cory
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
