--- a/bot-api/src/main/resources/application.properties
+++ b/bot-api/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.datasource.username=cory
 spring.datasource.password=cory
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=create-drop
 #spring.jpa.hibernate.ddl-auto=validate For production and shits
 
 springfox.documentation.swagger.v2.path=/oai/api-docs
