--- a/bot-client/src/main/resources/bot-client/application.properties
+++ b/bot-client/src/main/resources/bot-client/application.properties
@@ -1,8 +1,8 @@
-bot.api.url=http://localhost
-bot.name=baronvonfonz
+playerBot.api.url=http://localhost
+playerBot.name=baronvonfonz
 
 tesseract.data.path=C:\\Program Files (x86)\\Tesseract-OCR\\
-tesseract.magic.cards.name.list=C:\\testing\\mtgo-bot\\user-words-magic.txt
+tesseract.magic.cards.name.list=C:\\testing\\mtgo-playerBot\\user-words-magic.txt
 image.scaling.factor=4
 screen.width=1920
 screen.height=1080
