Yet more subprojects

--- a/bot-client/pom.xml
+++ b/bot-client/pom.xml
@@ -16,8 +16,8 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>com.cd.bot.api</groupId>
-			<artifactId>bot-api</artifactId>
+			<groupId>com.cd.bot.wrapper</groupId>
+			<artifactId>bot-api-wrapper</artifactId>
 			<version>${project.version}</version>
 		</dependency>
 
@@ -136,20 +136,6 @@
 			<artifactId>thumbnailator</artifactId>
 			<version>[0.4, 0.5)</version>
 		</dependency>
-
-		<!-- https://mvnrepository.com/artifact/org.apache.httpcomponents/httpclient -->
-		<dependency>
-			<groupId>org.apache.httpcomponents</groupId>
-			<artifactId>httpclient</artifactId>
-			<version>4.5.3</version>
-		</dependency>
-		<!-- https://mvnrepository.com/artifact/org.apache.httpcomponents/httpmime -->
-		<dependency>
-			<groupId>org.apache.httpcomponents</groupId>
-			<artifactId>httpmime</artifactId>
-			<version>4.5.3</version>
-		</dependency>
-
 
 	</dependencies>
 
