We're breaking this wide open

--- a/bot-api/src/main/resources/api-application.properties
+++ b/bot-api/src/main/resources/api-application.properties
@@ -1,3 +1,5 @@
+bot.client.url=192.168.1.152
+
 spring.datasource.url=jdbc:postgresql://localhost:5432/springbootdb
 spring.datasource.username=cory
 spring.datasource.password=cory
