--- a/bot-api/src/main/resources/api-application.properties
+++ b/bot-api/src/main/resources/api-application.properties
@@ -11,5 +11,6 @@ spring.jpa.hibernate.ddl-auto=update
 springfox.documentation.swagger.v2.path=/oai/api-docs
 springfox.documentation.swagger.v2.host=192.168.1.152
 server.port=${port:80}
+security.basic.enabled=false
 
 upload.temp.folder=C:\\testing\\tmp
