--- a/bot-client-wrapper/pom.xml
+++ b/bot-client-wrapper/pom.xml
@@ -38,6 +38,11 @@
 			<artifactId>httpmime</artifactId>
 			<version>4.5.3</version>
 		</dependency>
+		<dependency>
+			<groupId>org.bouncycastle</groupId>
+			<artifactId>bcprov-jdk15on</artifactId>
+			<version>1.57</version>
+		</dependency>
 	</dependencies>
 
 	<properties>
