SSL hell - part 2, 403 forbidden

--- a/bot-client-wrapper/src/main/resources/wrapper-application.properties
+++ b/bot-client-wrapper/src/main/resources/wrapper-application.properties
@@ -1,4 +1,4 @@
-keystore.location=${app.home}/keystores/master.jks
+keystore.location=${app.home}/keystores/keystore.jks
 keystore.password=${PASSWORD}
-trust.store.location=${app.home}/keystores/keystore.jks
+trust.store.location=${app.home}/keystores/truststore.jks
 trust.store.password=${PASSWORD}
