Refactored api/client with separate properties and keystores

--- a/bot-client/src/main/resources/client-application.properties
+++ b/bot-client/src/main/resources/client-application.properties
@@ -3,11 +3,11 @@ bot.name=foo
 password=bar
 
 #Web sec
-server.ssl.key-store=${app.home}/keystore/keystore.jks
+server.ssl.key-store=${app.home}/client/keystore.jks
 server.ssl.key-store-password=${PASSWORD}
 server.ssl.key-alias=192.168.1.152
 server.ssl.key-password=${PASSWORD}
-server.ssl.trust-store=${app.home}/keystores/truststore.jks
+server.ssl.trust-store=${app.home}/truststore.jks
 server.ssl.trust-store-password=${PASSWORD}
 server.ssl.client-auth=need
 server.ssl.enabled=true
