--- a/environment-resources/keystores/Makefile
+++ b/environment-resources/keystores/Makefile
@@ -10,10 +10,10 @@ CLIENTNAME=master
 # ST = State Name
 # C  = Country (2-letter Country Code)
 # E  = Email
-DNAME_CA='CN=master,OU=baeldung.com,O=Baeldung,L=SomeCity,ST=SomeState,C=CC'
+DNAME_CA='CN=Atraxa CA,OU=atraxa.com,O=atraxa,L=Asgard,ST=AS,C=CC'
 # For server certificates, the Common Name (CN) must be the hostname
-DNAME_HOST='CN=$(HOSTNAME),OU=baeldung.com,O=Baeldung,L=SomeCity,ST=SomeState,C=CC'
-DNAME_CLIENT='CN=$(CLIENTNAME),OU=baeldung.com,O=Baeldung,L=SomeCity,ST=SomeState,C=CC'
+DNAME_HOST='CN=$(HOSTNAME),OU=atraxa.com,O=atraxa,L=SomeCity,ST=SomeState,C=CC'
+DNAME_CLIENT='CN=$(CLIENTNAME),OU=atraxa.com,O=atraxa,L=SomeCity,ST=SomeState,C=CC'
 TRUSTSTORE=truststore.jks
 
 all:	clean create-keystore add-host create-truststore add-client
