--- a/bot-orchestrator/pom.xml
+++ b/bot-orchestrator/pom.xml
@@ -47,7 +47,17 @@
 			<artifactId>bot-model</artifactId>
 			<version>${project.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>com.cd.bot.wrapper</groupId>
+			<artifactId>bot-api-wrapper</artifactId>
+			<version>${project.version}</version>
+		</dependency>
 	</dependencies>
+
+	<properties>
+		<java.version>1.8</java.version>
+	</properties>
+
 	<build>
 		<plugins>
 			<plugin>
