Continued fleshing out of orchestrator, currently stumbling to due to config leak

--- a/bot-orchestrator/src/main/resources/orchestrator-application.properties
+++ b/bot-orchestrator/src/main/resources/orchestrator-application.properties
@@ -1,3 +1,6 @@
+#Not a web project
+spring.main.web-environment=false
+
 spring.datasource.url=jdbc:postgresql://localhost:5432/springbootdb
 spring.datasource.username=cory
 spring.datasource.password=cory
