--- a/bot-orchestrator/pom.xml
+++ b/bot-orchestrator/pom.xml
@@ -15,15 +15,6 @@
 	</parent>
 
 	<dependencies>
-		<!-- Compile -->
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-integration</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.integration</groupId>
-			<artifactId>spring-integration-file</artifactId>
-		</dependency>
 		<!-- Optional -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -65,6 +56,8 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 				<configuration>
 					<classifier>exec</classifier>
+					<excludeGroupIds>io.springfox, io.swagger, org.thymeleaf</excludeGroupIds>
+					<excludeArtifactIds>bot-client, bot-api</excludeArtifactIds>
 				</configuration>
 			</plugin>
 		</plugins>
