--- a/bot-client-wrapper/pom.xml
+++ b/bot-client-wrapper/pom.xml
@@ -16,6 +16,17 @@
 
 	<dependencies>
 		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-websocket</artifactId>
+			<exclusions>
+				<exclusion>
+					<groupId>org.springframework.boot</groupId>
+					<artifactId>spring-boot-starter-tomcat</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+
+		<dependency>
 			<groupId>com.cd.bot.client</groupId>
 			<artifactId>bot-client</artifactId>
 			<version>${project.version}</version>
@@ -37,11 +48,6 @@
 			<groupId>org.apache.httpcomponents</groupId>
 			<artifactId>httpmime</artifactId>
 			<version>4.5.3</version>
-		</dependency>
-		<dependency>
-			<groupId>org.bouncycastle</groupId>
-			<artifactId>bcprov-jdk15on</artifactId>
-			<version>1.57</version>
 		</dependency>
 	</dependencies>
 
