--- a/bot-client-wrapper/pom.xml
+++ b/bot-client-wrapper/pom.xml
@@ -32,8 +32,8 @@
 			<version>${project.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>com.cd.bot.client.model</groupId>
-			<artifactId>bot-client-model</artifactId>
+			<groupId>com.cd.bot.model</groupId>
+			<artifactId>bot-model</artifactId>
 			<version>${project.version}</version>
 		</dependency>
 
