--- a/bot-client/pom.xml
+++ b/bot-client/pom.xml
@@ -17,8 +17,8 @@
 	<dependencies>
 
 		<dependency>
-			<groupId>com.cd.bot.client.model</groupId>
-			<artifactId>bot-client-model</artifactId>
+			<groupId>com.cd.bot.model</groupId>
+			<artifactId>bot-model</artifactId>
 			<version>${project.version}</version>
 		</dependency>
 
@@ -29,8 +29,16 @@
 		</dependency>
 
 		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-websocket</artifactId>
+			<groupId>org.springframework.kafka</groupId>
+			<artifactId>spring-kafka</artifactId>
+			<version>${spring-kafka.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.kafka</groupId>
+			<artifactId>spring-kafka-test</artifactId>
+			<version>${spring-kafka.version}</version>
+			<scope>test</scope>
 		</dependency>
 
 		<!-- Apache Commons -->
