--- a/bot-ui/package.json
+++ b/bot-ui/package.json
@@ -12,9 +12,7 @@
     "react-dom": "^15.5.4",
     "react-redux": "^5.0.4",
     "react-router": "^3.0.0",
-    "redbox-react": "^1.3.6",
-    "redux": "^3.6.0",
-    "redux-thunk": "^2.2.0"
+    "redbox-react": "^1.3.6"
   },
   "devDependencies": {
     "babel-core": "^6.24.1",
@@ -30,6 +28,7 @@
     "babel-runtime": "^6.20.0",
     "babel-polyfill": "^6.20.0",
     "html-webpack-plugin": "2.28.0",
+    "react-to-html-webpack-plugin": "2.2.0",
     "webpack": "2.6.1",
     "webpack-dev-server": "2.4.5",
     "eslint": "^3.19.0",
