--- a/bot-ui/package.json
+++ b/bot-ui/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^15.5.4",
     "react-redux": "^5.0.4",
     "react-router": "^3.0.0",
+    "redux-logger": "3.0.6",
     "redbox-react": "^1.3.6",
     "isomorphic-fetch": "2.2.1",
     "es6-promise": "4.1.0"
