--- a/bot-api/pom.xml
+++ b/bot-api/pom.xml
@@ -19,6 +19,7 @@
 			<groupId>com.cd.bot</groupId>
 			<artifactId>bot-ui</artifactId>
 			<version>${project.version}</version>
+			<scope>compile</scope>
 		</dependency>
 
 		<dependency>
