--- a/bot-api/pom.xml
+++ b/bot-api/pom.xml
@@ -29,12 +29,6 @@
 		</dependency>
 
 		<dependency>
-			<groupId>com.cd.bot.client.wrapper</groupId>
-			<artifactId>bot-client-wrapper</artifactId>
-			<version>${project.version}</version>
-		</dependency>
-
-		<dependency>
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
 			<version>9.4-1206-jdbc42</version>
@@ -53,11 +47,6 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>com.h2database</groupId>
-            <artifactId>h2</artifactId>
         </dependency>
 
 		<dependency>
@@ -97,7 +86,7 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 				<configuration>
 					<classifier>exec</classifier>
-					<excludeArtifactIds>bot-client</excludeArtifactIds>
+					<excludeArtifactIds>bot-client, tess4j</excludeArtifactIds>
 				</configuration>
 			</plugin>
 		</plugins>
