--- a/bot-ui/package.json
+++ b/bot-ui/package.json
@@ -11,13 +11,14 @@
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-redux": "^5.0.4",
-    "react-router": "^3.0.0",
+    "react-router-dom": "4.1.1",
     "redux-logger": "3.0.6",
     "redbox-react": "^1.3.6",
     "isomorphic-fetch": "2.2.1",
     "es6-promise": "4.1.0"
   },
   "devDependencies": {
+    "dotenv": "4.0.0",
     "babel-core": "^6.24.1",
     "babel-eslint": "^7.2.3",
     "babel-loader": "^7.0.0",
