--- a/bot-orchestrator/pom.xml
+++ b/bot-orchestrator/pom.xml
@@ -32,6 +32,13 @@
 			<version>${spring-kafka.version}</version>
 			<scope>test</scope>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.datatype/jackson-datatype-hibernate5 -->
+		<dependency>
+			<groupId>com.fasterxml.jackson.datatype</groupId>
+			<artifactId>jackson-datatype-hibernate5</artifactId>
+			<version>2.8.8</version>
+		</dependency>
+
 
 		<!-- Test -->
 		<dependency>
@@ -42,8 +49,6 @@
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
-			<version>2.3.2</version>
-			<scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>com.cd.bot.model</groupId>
