--- a/bot-client/pom.xml
+++ b/bot-client/pom.xml
@@ -35,6 +35,13 @@
 			<scope>test</scope>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.datatype/jackson-datatype-hibernate5 -->
+		<dependency>
+			<groupId>com.fasterxml.jackson.datatype</groupId>
+			<artifactId>jackson-datatype-hibernate5</artifactId>
+			<version>2.8.8</version>
+		</dependency>
+
 		<!-- Apache Commons -->
 		<dependency>
 			<groupId>commons-io</groupId>
