--- a/bot-client/pom.xml
+++ b/bot-client/pom.xml
@@ -63,7 +63,7 @@
 		<dependency>
 			<groupId>net.coobird</groupId>
 			<artifactId>thumbnailator</artifactId>
-			<version>[0.4, 0.5)</version>
+			<version>0.4.8</version>
 		</dependency>
 
 		<dependency>
