Refactor for separate UI and Bot Jenkinsfile

--- a/ui/Jenkinsfile
+++ b/ui/Jenkinsfile
@@ -20,11 +20,11 @@ node {
     }
 
     stage ('Test') {
-        rtMaven.run pom: 'pom.xml', goals: 'clean test'
+        rtMaven.run pom: 'ui/pom.xml', goals: 'clean test'
     }
 
     stage ('Install') {
-        rtMaven.run pom: 'pom.xml', goals: 'install', buildInfo: buildInfo
+        rtMaven.run pom: 'ui/pom.xml', goals: 'install', buildInfo: buildInfo
     }
 
     stage ('Deploy') {
