Refactor for separate UI and Bot Jenkinsfile

--- a/test/Jenkinsfile
+++ b/test/Jenkinsfile
@@ -1,20 +1,22 @@
-node {
+pipeline {
     agent {
         label 'desktop'
     }
 
-    def server
-    def downloadSpec = """{
-     "files": [
-      {
-          "pattern": "mtgo-best-bot-releases/*.jar",
-          "target": "mtgo-best-bot/"
-        }
-     ]
-    }"""
+    stages {
+        stage ('Get latest') {
+            def server
+            def downloadSpec = """{
+             "files": [
+              {
+                  "pattern": "mtgo-best-bot-releases/*.jar",
+                  "target": "mtgo-best-bot/"
+                }
+             ]
+            }"""
 
-    stage ('Get latest') {
-        server = Artifactory.server 'localhost'
-        server.download(downloadSpec)
+            server = Artifactory.server 'localhost'
+            server.download(downloadSpec)
+        }
     }
 }
