--- a/test/Jenkinsfile
+++ b/test/Jenkinsfile
@@ -4,14 +4,14 @@ pipeline {
     }
 
     def server
-    def downloadSpec = """{
+    def downloadSpec = {
      "files": [
       {
           "pattern": "mtgo-best-bot-releases/*.jar",
           "target": "mtgo-best-bot/"
         }
      ]
-    }"""
+    }
 
     stages {
         stage ('Get latest') {
