--- a/ui/bot-ui/package.json
+++ b/ui/bot-ui/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bot-ui",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "",
   "main": "./webapp",
   "scripts": {
@@ -11,6 +11,8 @@
     "bootstrap": "3.3.7",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
+    "redux": "3.7.2",
+    "redux-thunk": "2.2.0",
     "react-redux": "^5.0.4",
     "react-router-dom": "4.1.1",
     "redux-logger": "3.0.6",
