--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+*.iml
+.idea/
 target/
 pom.xml.tag
 pom.xml.releaseBackup
@@ -7,3 +9,4 @@ release.properties
 dependency-reduced-pom.xml
 buildNumber.properties
 .mvn/timing.properties
+.exe
